# FrameRenderer

./: .gitignore  CMakeLists.txt  README.md
Content/Levels/: RDR2_Rock_Shading.level.json  RenderDocWaterScene_NoWater.import_report.json  RenderDocWaterScene_NoWater.level.json  default_renderdoc_scene.level.json  renderdoc_plant_event_18024.level.json
Content/Materials/Default/: default_pbr.material.json
Content/Materials/RDR2Rock/: rdr2_capture_rock.material.json
Content/Materials/RenderDocPlant/: renderdoc_plant_event_18024.material.json
Content/Materials/RenderDocWaterScene/: rdc_scene_color_0_0_0_0_0_0.material.json  rdc_scene_color_0_0_0_2_0_0.material.json  rdc_scene_color_0_0_0_6_0_0.material.json  rdc_scene_color_0_0_0_8_0_0.material.json  rdc_scene_color_0_2_0_2_0_0.material.json  rdc_scene_color_0_8_0_8_1_0.material.json  rdc_scene_color_1_0_1_0_1_0.material.json  rdc_scene_tex_100184.material.json  rdc_scene_tex_100186.material.json  rdc_scene_tex_100188.material.json  rdc_scene_tex_100194.material.json  rdc_scene_tex_100208.material.json  rdc_scene_tex_100251.material.json  rdc_scene_tex_100651.material.json  rdc_scene_tex_100687.material.json  rdc_scene_tex_101126.material.json  rdc_scene_tex_101191.material.json  rdc_scene_tex_101205.material.json  rdc_scene_tex_101217.material.json  rdc_scene_tex_101371.material.json  rdc_scene_tex_101387.material.json  rdc_scene_tex_101698.material.json  rdc_scene_tex_101938.material.json  rdc_scene_tex_101941.material.json  rdc_scene_tex_101947.material.json  rdc_scene_tex_101953.material.json  rdc_scene_tex_102006.material.json  rdc_scene_tex_102495.material.json  rdc_scene_tex_102517.material.json  rdc_scene_tex_102747.material.json  rdc_scene_tex_102841.material.json  rdc_scene_tex_102847.material.json  rdc_scene_tex_102872.material.json  rdc_scene_tex_102907.material.json  rdc_scene_tex_102919.material.json  rdc_scene_tex_102935.material.json  rdc_scene_tex_102951.material.json  rdc_scene_tex_102971.material.json  rdc_scene_tex_103007.material.json  rdc_scene_tex_103065.material.json  (+31 more)
Content/Materials/TonemapColorChart/: tonemap_color_chart.material.json
Content/Models/RDR2Rock/: CaptureRockManifest.json
Content/Models/RenderDocPlant/: event_18024_import_manifest.json
Content/Textures/RDR2Rock/: 15308.dds
Content/Textures/RenderDocPlant/: 102006_basecolor_alpha.dds  102008_mask.dds  102010_normal.dds
Content/Textures/TonemapColorChart/: tonemap_color_chart.tga
Docs/: AgXTonemapping.md
Docs/RenderDocPlant/: event_18024_analysis.md
assets/renderdoc_rock/: CaptureRockManifest.json  README.md
assets/renderdoc_rock/textures/: 102493.dds  102495.dds  102497.dds  102499.dds  20264.dds  2592.dds  2597.dds
shaders/: deferred.hlsl  hwrt_gi_add.hlsl  lines.hlsl  lumen.hlsl  lumen_hwrt.hlsl  lumen_swrt.hlsl  material_common.hlsl  pbr.hlsl  pbr_common.hlsl  renderdoc_rock.hlsl  shadow.hlsl  shadow_common.hlsl  sky_atmosphere.hlsl  sky_ibl.hlsl  tonemap.hlsl  triangle.hlsl
skills/renderdoc-frame-reconstruction/: SKILL.md
skills/renderdoc-frame-reconstruction/agents/: openai.yaml
src/: main.cpp
src/Core/: Diagnostics.h  Types.h  Win32.h
src/Editor/: EditorAssets.cpp  EditorAssets.h  ObjLoader.cpp  ObjLoader.h
src/Engine/: Engine.cpp  Engine.h
src/Input/: InputState.h
src/Math/: Camera.h
src/Platform/Windows/: WindowsWindow.cpp  WindowsWindow.h
src/RHI/: D3D12RHI.cpp  D3D12RHI.h
src/RenderDoc/: CaptureManifest.cpp  CaptureManifest.h  CaptureRockRenderer.cpp  CaptureRockRenderer.h  DdsLoader.cpp  DdsLoader.h  Json.cpp  Json.h
src/Renderer/: MeshGeneration.cpp  MeshGeneration.h  RenderGraph.h  SceneRenderer.cpp  SceneRenderer.h  SimpleSceneRenderer.cpp  SimpleSceneRenderer.h  TonemapTypes.h
src/Renderer/Passes/: DeferredPass.cpp  HWRTGIPass.cpp  LumenPass.cpp  LumenSwrtPass.cpp  ShadowPass.cpp  SkyAtmospherePass.cpp  SkyIBLPass.cpp  TonemapPass.cpp
src/Scene/: SceneTypes.h
tools/: imgui_ui_smoke_test.ps1  import_water_local_scene.py  ui_smoke_test.ps1
